--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,6 +6,7 @@ charset-normalizer==3.4.3
 click==8.2.1
 filelock==3.19.1
 Flask==3.1.1
+Flask-JWT-Extended==4.7.1
 Flask-RESTful==0.3.10
 fsspec==2025.7.0
 hf-xet==1.1.7
@@ -19,6 +20,7 @@ networkx==3.5
 numpy==2.3.2
 packaging==25.0
 psutil==7.0.0
+PyJWT==2.10.1
 pytz==2025.2
 PyYAML==6.0.2
 regex==2025.7.34
