--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,6 +6,7 @@ charset-normalizer==3.4.3
 click==8.2.1
 filelock==3.19.1
 Flask==3.1.1
+flask-cors==6.0.1
 Flask-JWT-Extended==4.7.1
 Flask-RESTful==0.3.10
 fsspec==2025.7.0
