--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,7 +3,8 @@ aniso8601==10.0.1
 blinker==1.9.0
 certifi==2025.8.3
 charset-normalizer==3.4.3
-click==8.2.1
+click==8.1.8
+et_xmlfile==2.0.0
 filelock==3.19.1
 Flask==3.1.1
 flask-cors==6.0.1
@@ -17,8 +18,9 @@ itsdangerous==2.2.0
 Jinja2==3.1.6
 MarkupSafe==3.0.2
 mpmath==1.3.0
-networkx==3.5
-numpy==2.3.2
+networkx==3.2.1
+numpy==2.0.2
+openpyxl==3.1.5
 packaging==25.0
 psutil==7.0.0
 PyJWT==2.10.1
@@ -37,3 +39,4 @@ transformers==4.55.2
 typing_extensions==4.14.1
 urllib3==2.5.0
 Werkzeug==3.1.3
+wheel==0.45.1
