--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,8 @@ db
 *.db-shm
 backend/app.db
 backend/.env
+
+# Node modules
+/frontend-server/node_modules/
+/frontend/node_modules/
+/frontend-server/.env
